--- a/src/pages/Landing/styles.css
+++ b/src/pages/Landing/styles.css
@@ -128,6 +128,7 @@
     .buttons-container {
         grid-area: buttons;
         justify-content: flex-start;
+        margin: 0;
     }
 
     .buttons-container a {
